prusti-tests/tests/cargo_verify/overflow_checks/output.stderr
error: [Prusti: verification error] assertion might fail with "attempt to add with overflow"
 --> src/main.rs:2:5
  |
2 |     x + 1
  |     ^^^^^

error: could not compile `overflow_checks` (bin "overflow_checks") due to previous error
